# Geospatial-Validation-FastAPI

./: .dockerignore  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile_postgis  LICENSE  README.md  alembic.ini  compose.yaml  data_access_layer.py  database.py  example_queries.sql  main.py  models.py  pyproject.toml  schemas.py
alembic/: pa_boundary.sql
alembic/versions/: 001_init.py  002_add_postgis_extension.py  003_add_tables.py
app/: alembic.ini  data_access_layer.py  database.py  main.py  models.py  schemas.py
app/alembic/: env.py  pit_neighborhoods.sql
app/alembic/versions/: 001_init.py  002_add_postgis_extension.py  003_add_tables.py
geospatial_datasets/: load_shapefile.sh
geospatial_datasets/Neighborhoods_PIT/: Neighborhoods_.dbf  Neighborhoods_.shp  Neighborhoods_.shx
