[tool.poetry]
name = "pycon2024"
version = "0.1.0"
description = ""
authors = ["lazouich <lazouichford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
geoalchemy2 = "^0.15.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
ruff = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"